# cs5661-final

./: .gitignore  ACTION_SCHEMA.md  ANDROID_WORLD_PLAN.md  CURRENT_R29.md  FINAL_SUMMARY.md  FINAL_SUMMARY_runK.md  FINAL_SUMMARY_runL.md  FUTURE_WORK.md  README.md  SMOKE_REPORT.md  TRAINING_LOG.md  WAKE_UP_SUMMARY.md  autoresearch-dashboard.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  cs5661  main.py  pyproject.toml
experiments/: worklog.md
notes/: androidworld_setup.md
scripts/: add_prior_action.py  aggregate_m3a_baseline.py  analyze_tap_coords.py  aw_smoke_tasks.txt  compare_evals.py  convert_a11y_native_v1_to_v2.py  coord_aware_collator.py  coord_aware_trainer.py  download_androidcontrol_gcs.py  eval_a11y_native.py  eval_a11y_native_batched.py  eval_androidcontrol.py  eval_d2_sweep.sh  eval_runG_sweep.sh  eval_som.py  lifts_chain.sh  lifts_chain_summary.py  parse_a11y_data.py  prepare_a11y_native.py  prepare_androidcontrol.py  render_som.py  rescore_native.py  rescore_native_element.py  restratify_eval.py  runI_overnight_pipeline.sh  runI_postanalysis.py  run_androidworld_sweep.sh  run_aw_smoke_slice.sh  run_h_eval_sweep.sh  run_j_after_train.sh  run_j_clean.sh  run_j_resume_sequential.sh  run_k_chain.sh  run_k_resume_b.sh  run_l_chain.sh  run_m3a_baseline_full.sh  run_m3a_baseline_smoke.sh  smoke_test_batched_eval.sh  train_sft.py
scripts/pathZ/: convert_androidlab_som.py  eval_smoke.py  m3a_format.py  prepare_smoke_data.py  train_smoke.py
